# dbt-semantic-interfaces

./: .changie.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  generated_pydantic_output.json  mypy.ini  pydantic_shim.py  pyproject.toml
.changes/: header.tpl.md
.changes/unreleased/: Breaking Changes-20230516-160112.yaml  Breaking Changes-20230517-135638.yaml  Breaking Changes-20230529-190627.yaml  Breaking Changes-20230529-190835.yaml  Breaking Changes-20230615-152905.yaml  Breaking Changes-20230615-153301.yaml  Breaking Changes-20230710-123929.yaml  Breaking Changes-20230711-131951.yaml  Breaking Changes-20230711-162541.yaml  Breaking Changes-20230724-135614.yaml  Breaking Changes-20230727-165005.yaml  Breaking Changes-20230727-170535.yaml  Breaking Changes-20231023-103143.yaml  Breaking Changes-20241024-131227.yaml  Breaking Changes-20241105-180727.yaml  Breaking Changes-20241108-215906.yaml  Dependencies-20230711-141108.yaml  Dependencies-20230712-141113.yaml  Dependencies-20230814-191550.yaml  Dependencies-20230927-234903.yaml  Dependencies-20231010-103815.yaml  Dependencies-20231026-122748.yaml  Dependencies-20231026-161207.yaml  Dependencies-20231125-005006.yaml  Dependencies-20231213-113016.yaml  Dependencies-20231221-130418.yaml  Dependencies-20240213-203707.yaml  Dependencies-20240815-121023.yaml  Dependencies-20250618-154743.yaml  Dependencies-20260112-154246.yaml  Docs-20240108-193257.yaml  Features-20230515-155013.yaml  Features-20230515-161320.yaml  Features-20230516-100539.yaml  Features-20230516-112250.yaml  Features-20230516-150352.yaml  Features-20230516-162909.yaml  Features-20230517-103947.yaml  Features-20230517-104517.yaml  Features-20230606-130140.yaml  (+108 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  implementation-ticket.yml  regression-report.yml
.github/workflows/: bot-changelog.yml  cd-push-to-pypi.yaml  ci-pre-commit.yaml  ci-pytest.yaml  ci-schema-consistency.yaml  yank-pypi-release.yml
dbt_semantic_interfaces/: call_parameter_sets.py  dataclass_serialization.py  errors.py  jinja_compilers.py  model_transformer.py  model_validator.py  protocol_example.py  references.py  test_utils.py
dbt_semantic_interfaces/experimental/: saved_query_dependency_resolver.py
dbt_semantic_interfaces/implementations/: base.py  element_config.py  export.py  metadata.py  metric.py  node_relation.py  project_configuration.py  saved_query.py  semantic_manifest.py  semantic_model.py  semantic_version.py  time_spine.py  time_spine_table_configuration.py
dbt_semantic_interfaces/naming/: dundered.py
dbt_semantic_interfaces/objects/: aggregation_type.py  metric.py  semantic_manifest.py  semantic_model.py
dbt_semantic_interfaces/parsing/: dir_to_model.py  explicit_schema.py  objects.py  schema_validator.py  schemas.py  where_filter_parser.py
dbt_semantic_interfaces/protocols/: __init__.py  dimension.py  entity.py  export.py  measure.py  meta.py  metadata.py  metric.py  project_configuration.py  query_interface.py  saved_query.py  semantic_manifest.py  semantic_model.py  time_spine.py  time_spine_configuration.py  where_filter.py
dbt_semantic_interfaces/test_helpers/: dataclass_serialization.py
dbt_semantic_interfaces/transformations/: add_input_metric_measures.py  agg_time_dimension.py  boolean_aggregations.py  boolean_measure.py  convert_count.py  convert_median.py  cumulative_type_params.py  default_grain.py  default_granularity.py  fix_proxy_metrics.py  fix_simple_metric_rule.py  flatten_simple_metrics_with_measure_inputs.py  metric_time_granularity.py  names.py  proxy_measure.py  pydantic_rule_set.py  remove_plural_from_window_granularity.py  replace_input_measures_with_simple_metrics_transformation.py  rule_set.py  semantic_manifest_transformer.py  transform_rule.py
dbt_semantic_interfaces/type_enums/: __init__.py  conversion_calculation_type.py  date_part.py  export_destination_type.py  metric_type.py  node_type.py  period_agg.py  semantic_manifest_node_type.py  time_granularity.py
dbt_semantic_interfaces/validations/: agg_time_dimension.py  common_entities.py  dimension_const.py  element_const.py  entities.py  labels.py  measures.py  metrics.py  non_empty.py  primary_entity.py  reserved_keywords.py  saved_query.py  semantic_manifest_validator.py  semantic_models.py  shared_measure_and_metric_helpers.py  time_dimension_has_granularity.py  time_spines.py  unique_valid_name.py  validator_helpers.py  where_filters.py
tests/: example_project_configuration.py  migrate_manifest.py  test_dataclass_serialization.py  test_filter_renderer.py  test_implements_satisfy_protocols.py  test_pretty_print.py  test_protocol.py
tests/experimental/: test_saved_query_dependency_resolver.py
tests/fixtures/: model_fixtures.py  semantic_manifest_fixtures.py
tests/implementations/: test_semantic_manifest.py
tests/jinja_compilers/: test_where_filter_compiler.py
tests/measure_migration/: test_measure_migrated_manifest.py
tests/parsing/: test_metadata_parsing.py  test_metric_parsing.py  test_metric_parsing_with_custom_grain.py  test_model_deserialization.py  test_object_builder_item_description.py  test_saved_query_parsing.py  test_semantic_manifest_parsing.py  test_semantic_model_parsing.py  test_where_filter_parsing.py
tests/serialization/: test_serializable_dataclass_subclasses.py
tests/transformations/: test_boolean_measure_aggregation_rule.py  test_configurable_transform_rules.py  test_convert_count_rule.py  test_convert_median_rule.py  test_e2e_measure_to_model_transformations.py  test_fix_proxy_metric_transformation.py  test_flatten_simple_metrics_with_measure_inputs_rule.py  test_proxy_measure_transformation_rule.py  test_replace_input_measures_with_simple_metrics_transformation_rule.py
tests/validations/: test_agg_time_dimension.py  test_common_entities.py  test_configurable_rules.py  test_dimension_const.py  test_element_const.py  test_entities.py  test_labels.py  test_measures.py  test_metrics.py  test_saved_query.py  (+14 more)
(+57 files in other folders)
