[project]
name = "dbt-semantic-interfaces"
version = "0.1.0.dev1"
description = 'The shared semantic layer definitions that dbt-core and MetricFlow use'
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "dbt Labs", email = "info@dbtlabs.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic~=1.10.8",
  "jsonschema==3.2.0",
  "PyYAML~=6.0",
  "more-itertools==8.10.0",
  "Jinja2==3.1.2",
  "click>=7.1.2",
  "python-dateutil==2.8.2",
  "importlib_metadata==6.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.changes",
  ".changie.yaml",
  ".gitignore",
  ".pre-commit-config.yaml",
  "CONTRIBUTING.md",
  "MAKEFILE",
  "/tests",
]

[tool.hatch.envs.dev-env.scripts]
all = ["pre-commit run --all-files"]

[tool.hatch.envs.dev-env]
description = "Env for running development commands like pytest / pre-commit"
dependencies = [
  "pytest~=7.3.0",
  "pytest-xdist~=3.2.1",
  "httpx~=0.24.0",
  "pre-commit~=3.2.2",
  "isort~=5.12.0",
  "black~=23.3.0",
  "ruff~=0.0.260",
  "mypy~=1.3.0",
  "pytest~=7.3.0",
  "types-Jinja2~=2.11.9",
  "types-jsonschema~=4.17",
  "types-python-dateutil~=2.8.19",
  "types-PyYAML~=6.0.12",
]

[tool.ruff]
line-length = 120
select = [
  "E", # Pycodestyle
  "F", # Pyflakes
  "W", # Whitespace
  "D", # Pydocs
]
ignore = [
  # Missing docstring in public module -- often docs handled within classes
  "D100",
  # Missing docstring in public package -- often docs handled within files not __init__.py
  "D104"
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
mypy_path = "third-party-stubs/"
namespace_packages = true
warn_unused_configs = true
disallow_untyped_defs = true
warn_redundant_casts = true

# Don't run the extensive mypy checks on custom stubs
[[tool.mypy.overrides]]
module = ["logbook.*"]
disallow_untyped_defs = false

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
